<?xml version="1.0"?>
<package>
  <name>visual_inertial_ros</name>
  <version>0.0.0</version>
  <description>visual_inertial_ros package</description>

  <maintainer email="hyun91015@gmail.com">ChanghyeonKim</maintainer>

  <license>GPL 2.0</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>